[package]
name = "test-server"
version = "0.9.0"
authors = ["Christian Fochler <mail@christianfochler.de>"]
license = "MIT"
repository = "https://github.com/ChriFo/test-server-rs"
publish = false
edition = "2018"

[dependencies]
actix-rt = "1.1.1"
actix-web = { version = "2.0.0", default-features = false }
anyhow = "1.0.32"
bytes = "0.5.6"
crossbeam-channel = "0.4.3"
futures = "0.3.5"
http = "0.2.1"
rand = "0.7.3"

[dev-dependencies]
ureq = { version = "1.4.0", default-features = false }
