[package]
name = "test-server"
version = "0.9.1"
authors = ["Christian Fochler <mail@christianfochler.de>"]
license = "MIT"
repository = "https://github.com/ChriFo/test-server-rs"
publish = false
edition = "2018"
build = "build.rs"

[dependencies]
actix-web = { version = "4.0.0-beta", default-features = false }
crossbeam-channel = "0.5"
futures = "0.3"
http = "0.2"
log = "0.4"
rand = "0.8"

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"
ureq = { version = "2.0", default-features = false }
